<resources>
    <string name="app_name">Baking App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="previous_recipe_button">Previous Recipe</string>
    <string name="next_recipe_button">Next Recipe</string>
    <string name="show_ingredients"><![CDATA[Show Ingredients >]]></string>
</resources>
