<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/ingredients_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ingredients_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ADD8E6"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/show_ingredients"
            android:textSize="30sp"
            tools:text="INGREDIENTS" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/master_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"></android.support.v7.widget.RecyclerView>

</LinearLayout>